--- a/demo/demo5.html
+++ b/demo/demo5.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+    <style>
+    #myLink{display: none;}
+    </style>
 </head>
 <body>
 	 <div id="div1" class="class2">我
@@ -12,11 +15,68 @@
             我是第二个P</p>
         <img src="" alt="11">
     </div>
-
+    
+    <script type="text/html" id="tmpList">
+        <ul id='<%=title%>'>
+        <%for(var i = 0;i <= 2;i++){%>
+          <li id='<%=li[i].id%>' class="<%=li[i].class%>"><%=li[i].text%></li>
+        <%}%>
+        </ul>
+    </script>
+    <!-- 引入baiduTemplate -->
+    <script src="http://wangxiao.github.com/BaiduTemplate/debug/js/baiduTemplate.js"></script>
     <script>
   
 
     	window.onload = function(argument) {
+
+            var data = {
+                'title':'myLink',
+                'li':[
+                    {
+                        'id':'a',
+                        'text':'apple',
+                        'class':'A'
+                    },
+                    {
+                        'id':'b',
+                        'text':'banana',
+                        'class':'B'
+                    },
+                    {
+                        'id':'c',
+                        'text':'orange',
+                        'class':'C'
+                    }
+                ]
+            }
+
+            var list = document.getElementById('myLink');
+                li_a = document.getElementById('a');
+
+
+            document.body.addEventListener('click',function(event){
+                console.log(event.target.innerHTML + 'list');
+            })
+
+            // li_a.addEventListener('click',function(event){
+            //     //event.stopPropagation();
+            //     console.log(event.target.innerHTML + 'li_a');
+
+            // })
+
+
+            var html = baidu.template('tmpList',data);
+            var obj = document.createElement('div');
+
+            obj.innerHTML = html;
+            document.getElementById('div1').appendChild(obj.childNodes[1]);
+
+
+
+
+
+
 
 
     		function Person(name,age,gender){
